--- a/sass/sections/_postscript.scss
+++ b/sass/sections/_postscript.scss
@@ -47,7 +47,7 @@
       }
 
       @include bp-nq($large) {
-        width: calc(100/6 * 1%);
+        width: auto;
       }
 
       & > a {
